--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: [Les meilleures audiences dans les salles de cinéma françaises]
+description: [Cette présentation vise à montrer les scores d’audience réalisés par les 200 films les plus plébiscités dans les salles françaises, sur une période allant de 1945 à 2020]
